fix(card): fix the card sizes, title, and price alignment

--- a/packages/portal/src/app/shared/card/card.component.scss
+++ b/packages/portal/src/app/shared/card/card.component.scss
@@ -17,7 +17,7 @@ img {
 }
 
 .mat-mdc-card-title{
-  padding-top:5px;
+  padding-top:6px;
 }
 
 .mat-card-title {
